ITS WORKING! ITS WORKING! real-time chat, that is. Add websocket jwt query param handshake handler/interceptor, send message templates for new conversations and new messages to users. refactored the frontend to put the state management for chat/websockets into a single service and then inject that in the component for use and real time chat.